[package]
name = "logosaurus"
version = "0.3.4"
authors = ["Nishanth Shanmugham <nishanths@utexas.edu>"]
edition = "2018"
description = "Logging implementation modeled after the Go standard library's log package."
repository = "https://github.com/littleroot/logosaurus"
documentation = "https://docs.rs/logosaurus"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
